RESOLVED FIXED313311
WPEQtView cannot be scrolled by mouse wheel
https://bugs.webkit.org/show_bug.cgi?id=313311
Summary WPEQtView cannot be scrolled by mouse wheel
tusooa
Reported 2026-04-25 09:55:17 PDT
wheel events are not recognized in WPEQtView altogether, tested with https://developer.mozilla.org/en-US/docs/Web/API/Element/wheel_event
Attachments
tusooa
Comment 1 2026-04-25 10:02:57 PDT
EWS
Comment 2 2026-04-25 10:58:02 PDT
Committed 312019@main (a3c1d3be6028): <https://commits.webkit.org/312019@main> Reviewed commits have been landed. Closing PR #63594 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.