Fix wheel event handling in WPEQtView

https://bugs.webkit.org/show_bug.cgi?id=313311

Reviewed by Adrian Perez de Castro.

On some platforms QWheelEvent will not have pixelDelta. Qt recommends
fallback to angleDelta when it is not available.

See https://doc.qt.io/qt-6/qwheelevent.html#pixelDelta-prop

Also, WPEEvent for scroll expects number of ticks if and only if
has_precise_deltas is false. This means that we should set
has_precise_deltas to true if we have pixelDelta.

Go to
https://developer.mozilla.org/en-US/docs/Web/API/Element/wheel_event
and check the wheel event is working.

* Source/WebKit/UIProcess/API/wpe/qt6/WPEViewQtQuick.cpp:
(wpe_view_dispatch_wheel_event): Fix wheel event handling when
pixelDelta is not available.

Canonical link: https://commits.webkit.org/312019@main